# qa-guru-python-advanced

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
app/: main.py
app/api/: dependencies.py
app/api/routers/: __init__.py  products.py  users.py
app/core/: config.py  decorators.py
app/exceptions/: exceptions.py
app/models/: models.py  product.py  user.py
app/services/: product_service.py  user_service.py
app/storage/: base_storage.py  database_engine.py  factory.py  file_storage.py
app/storage/database/: database_storage.py  product_storage.py  user_storage.py
test_framework/: config.py
test_framework/clients/: api_client.py  product_client.py  user_client.py
test_framework/session/: base_session.py
test_framework/tests/: conftest.py  test_products.py  test_smoke.py  test_users.py
tests/: conftest.py  schemas.py  test_helpers.py  test_products.py  test_smoke.py  test_users.py
