[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = "FastAPI project with user and product management"
authors = ["avartemova <avartemova@mts.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
uvicorn = "^0.34.2"
requests = "^2.32.0"
jsonschema = "^4.24.0"
fastapi-pagination = "^0.13.2"
pytest = "^8.4.0"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
sqlmodel = "^0.0.24"
product = "^0.1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
setuptools = "^69.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
